--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,16 @@
 version: "2"
 services:
- web:
- build: .
- ports:
- — "3000:3000"
- depends_on:
- — mongo
+ webapp:
+ 	container_name: survey_form
+	restart: always
+ 	build: .
+ 	ports:
+ 	- "3000:3000"
+ 	depends_on:
+ 	- mongo
  mongo:
- image: mongo
- ports:
- — "5000:5000"
+ 	image: mongo
+	volumes:
+    - ./data:/data/db
+ 	ports:
+ 	- "5000:5000"
