--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,14 @@ services:
  webapp:
  	container_name: survey
 	restart: always
- 	build: .
- 	ports: - "3000:3000"
+	build: .
+	ports: 
+	- "3000:3000"
  	depends_on:
- 	- mongo
+	- mongo
  mongo:
  	image: mongo
-	volumes: - ./data:/data/db
+	volumes: 
+	- ./data:/data/db
  	ports:
- 	- "5000:5000"
+	- "5000:5000"
