--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,13 @@
-version: "1"
+
+version: "2"
 services:
- webapp:
- 	container_name: survey
-	restart: always
-	build: .
-	ports: 
-	- "3000:3000"
- 	depends_on:
-	- mongo
+ web:
+ build: .
+ ports:
+ - "3000:3000"
+ depends_on:
+ - mongo
  mongo:
- 	image: mongo
-	volumes: 
-	- ./data:/data/db
- 	ports:
-	- "5000:5000"
+ image: mongo
+ ports:
+ - "5000:5000"
