--- a/package.json
+++ b/package.json
@@ -8,19 +8,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^2.2.0",
-    "moment": "^2.27.0",
-    "react": "^16.13.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "^16.13.1",
-    "react-google-button": "^0.7.1",
-    "react-google-login": "^5.2.2",
-    "react-moment": "^0.9.7",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "bunyan": "^1.8.15",
+    "chart.js": "^3.2.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -30,12 +21,24 @@
     "mongoose": "^5.9.25",
     "mongoose-paginate-v2": "^1.3.9",
     "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.2.0"
+    "multer-gridfs-storage": "^4.2.0",
+    "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
+    "react-chartjs-2": "^3.0.3",
+    "react-dom": "^16.13.1",
+    "react-google-button": "^0.7.1",
+    "react-google-login": "^5.2.2",
+    "react-moment": "^0.9.7",
+    "react-native-fs": "^2.18.0",
+    "react-native-logs": "^3.0.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "jest": "^26.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "client": "npm start",
     "server": "cd server && node index.js",
@@ -57,6 +60,10 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^5.2.0"
+    "babel-preset-env": "^1.7.0",
+    "concurrently": "^5.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2"
   }
 }
